@@ -40,6 +40,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12794. Support additional compression levels for GzipCodec.
     (Ravi Mutyala via junping_du)
 
+    HADOOP-12825. Log slow name resolutions.
+    (Sidharta Seethana via stevel)
+
   OPTIMIZATIONS
 
     HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
